# micromouse

./: .gitignore  .mxproject  .project  CMakeLists.txt  micromouse.ioc  stm32f103c8_blue_pill.cfg
Core/Inc/: controller.h  main.h  maze.h  sensor.h  solver.h  stm32f1xx_it.h
Core/Src/: controller.c  gpio.c  main.c  maze.c  maze_stack.c  sensor.c  sensor_vl53l0x.c  solver_stack.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c  tim.c
Core/Startup/: startup_stm32f103c8tx.s
firmeware/: Cargo.toml  rustfmt.toml
firmeware/.cargo/: config.toml
firmeware/src/: main.rs  maze.rs  motor.rs  sensor.rs  utils.rs
firmeware/src/utils/: direction.rs  pid.rs
