[package]
name = "micromouse"
version = "0.1.0"
edition = "2024"

[dependencies]
embassy-stm32 = { version = "0.6.0", features = ["defmt", "memory-x", "stm32f103c8", "time-driver-tim2", "exti", "unstable-pac"] }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }

embassy-executor = { version = "0.10.0", features = ["platform-cortex-m", "executor-thread", "executor-interrupt", "defmt"] }
embassy-futures = { version = "0.1.2" }
embassy-sync = { version = "0.8.0", features = ["defmt"] }
embassy-time = { version = "0.5.1", features = ["defmt", "defmt-timestamp-uptime"] }
embassy-usb = { version = "0.6.0", features = ["defmt"] }

cortex-m = { version = "0.7.7", features = ["inline-asm", "critical-section-single-core"] }
cortex-m-rt = "0.7.5"

defmt = "1.1.0"
defmt-rtt = "1.2.0"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }

static_cell = "2.1.1"
portable-atomic = { version = "1.5", features = ["unsafe-assume-single-core"] }

[profile.dev]
opt-level = "s"

[profile.release]
debug = 2

[package.metadata.embassy]
build = [
  { target = "thumbv7m-none-eabi", artifact-dir = "out/micromouse" }
]
